<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.cishell.testing</groupId>
	<artifactId>testing</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.cishell</groupId>
		<artifactId>parent</artifactId>
		<version>0.0.1</version>
	</parent>
	<modules>
		<module>org.cishell.framework.tests</module>
		<!-- <module>org.cishell.utility.dict.tests</module>
		<module>org.cishell.streaming.prototype</module>
		<module>org.cishell.testing.convertertester.algorithm</module>
		<module>org.cishell.testing.convertertester.commandline</module>
		<module>org.cishell.testing.convertertester.core.new</module>-->
		<module>org.cishell.utilities.tests</module> 
	</modules>

	
	<properties>
		<tychoVersion>0.18.1</tychoVersion>
		<memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
		<memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
	</properties>
	<repositories>
		<repository>
			<id>Indigo</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/indigo/201106220900/</url>
			<releases>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
		</repository>
		<repository>
			<id>eclipse-orbit</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20110523182458/repository</url>
			<releases>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
		</repository>
	</repositories>



	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tychoVersion}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tychoVersion}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tychoVersion}</version>
				<!-- <configuration>
					<dependencies>
						<dependency>
							<type>eclipse-feature</type>
							<artifactId>org.cishell.environment.equinox.feature</artifactId>
							<version>0.0.0</version>
						</dependency>
						<dependency>
							<type>eclipse-feature</type>
							<artifactId>org.cishell.reference.feature</artifactId>
							<version>0.0.0</version>
						</dependency>
						<dependency>
							<type>eclipse-feature</type>
							<artifactId>org.cishell.feature</artifactId>
							<version>0.0.0</version>
						</dependency>
					</dependencies>
					<bundleStartLevel>
						<bundle>
							<id>org.eclipse.equinox.metatype</id>
							<level>4</level>
							<autoStart>true</autoStart>
						</bundle>
						<bundle>
							<id>org.cishell.service.autostart</id>
							<level>4</level>
							<autoStart>true</autoStart>
						</bundle>
						<bundle>
							<id>org.eclipse.equinox.log</id>
							<level>4</level>
							<autoStart>true</autoStart>
						</bundle>
					</bundleStartLevel>
				</configuration> -->
			</plugin>
		</plugins>
	</build>
</project>
